--- a/client/css/crypto.css
+++ b/client/css/crypto.css
@@ -155,7 +155,7 @@ form fieldset:last-of-type {
 
   li {
     display: grid;
-    grid-template-columns: 36px auto;
+    grid-template-columns: 32px auto;
     grid-template-rows: repeat(2, auto);
     gap: 0.25rem 1rem;
   }
@@ -168,13 +168,16 @@ form fieldset:last-of-type {
 }
 
 button.delete-btn {
+  background: 0;
+  border: none;
   align-items: center;
-  color: var(--error);
+  color: var(--lightpink);
   display: flex;
   grid-column: 1 / 2;
   grid-row: 1 / 3;
-  min-height: 34px;
+  justify-content: center;
   min-width: 0;
+  padding: 0;
 }
 
 @media (max-width: 490px) {
